--- a/index.html
+++ b/index.html
@@ -1,75 +1,286 @@
-# DalPezzoMichele.github.io
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Colorata</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to right, #ff9a9e, #fad0c4, #fad0c4);
-            color: #333;
-        }
-        header {
-            text-align: center;
-            background-color: #ff6f61;
-            padding: 20px;
-            color: white;
-            font-size: 2em;
-            font-weight: bold;
-        }
-        section {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-        .card {
-            background-color: #ffe066;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            padding: 15px;
-            text-align: center;
-            transition: transform 0.3s;
-        }
-        .card:hover {
-            transform: scale(1.05);
-            background-color: #ffcc00;
-        }
-        footer {
-            text-align: center;
-            background-color: #6a4c93;
-            color: white;
-            padding: 15px;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>Chernobyl - Il Disastro Nucleare</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        Benvenuti nella Pagina Colorata
-    </header>
-    <section>
-        <div class="card">
-            <h2>Card 1</h2>
-            <p>Questa è la prima card. Colorata e divertente!</p>
+    <!-- Overlay effetto scanlines -->
+    <div class="scanlines"></div>
+
+```
+<!-- Intestazione -->
+<header class="top-bar">
+    <div class="date-display">
+        Data: <span id="current-date"></span>
+    </div>
+    <div class="autore">
+        Massenz, Dal Pezzo, 5CI
+    </div>
+</header>
+
+<div class="container">
+    <!-- Menu laterale -->
+    <aside class="sidebar">
+        <div class="sidebar-header">
+            <h3>CHERNOBYL</h3>
+            <div class="status">
+                <div class="status-dot"></div>
+                <span>Educazione civica</span>
+            </div>
         </div>
-        <div class="card">
-            <h2>Card 2</h2>
-            <p>Questa è la seconda card. Dai un'occhiata!</p>
-        </div>
-        <div class="card">
-            <h2>Card 3</h2>
-            <p>Questa è la terza card. Più colori per tutti!</p>
-        </div>
-    </section>
-    <footer>
-        © 2025 Pagina Colorata. Tutti i diritti riservati.
-    </footer>
+
+        <nav class="sidebar-nav">
+            <ul>
+                <li class="active" data-section="introduzione">Introduzione</li>
+                <li data-section="cronologia">Cronologia</li>
+                <li data-section="conseguenze">Conseguenze</li>
+                <li data-section="zona">Zona di Esclusione</li>
+                <li data-section="galleria">Galleria Foto
+                </li>
+            </ul>
+        </nav>
+    </aside>
+
+    <!-- Contenuto principale -->
+    <main class="content">
+        <!-- Sezione Introduzione -->
+        <section id="introduzione" class="active">
+            <h1>CHERNOBYL</h1>
+            <h2>Il disastro nucleare del 26 aprile 1986</h2>
+
+            <div class="content-block">
+                <p class="importante">Il 26 aprile 1986, alle 01:23, il reattore numero 4 della centrale nucleare di Chernobyl esplose durante un test di sicurezza, causando il peggior disastro nucleare della storia.</p>
+
+                <div class="image-container">
+                    <div class="image-placeholder">
+                        <img src="img/508a7dea38b3c35afad9f5e2ed65b288-1460373_highres-data.webp" alt="Chernobyl after the disaster" width="750" height="300"/>
+                    </div>
+                </div>
+
+                <h3>La centrale nucleare</h3>
+                <ul class="info-list">
+                    <li><strong>Posizione:</strong> Ucraina settentrionale (allora parte dell'URSS).</li>
+                    <li><strong>Tipo di reattore:</strong> La centrale utilizzava reattori RBMK-1000, caratterizzati da un difetto di progettazione nel sistema di controllo e dall'assenza di un adeguato contenimento secondario.</li>
+                    <li><strong>Potenza:</strong> 1000 MW per reattore (Megawatt termico).</li>
+                    <li><strong>Anno costruzione:</strong> 1977-1983</li>
+                </ul>
+
+                <p>La centrale era situata vicino alla città di Pripyat, fondata appositamente nel 1970 per ospitare i lavoratori dell'impianto e le loro famiglie. Al momento del disastro, Pripyat contava circa 49.000 abitanti.
+                    Nel 1986, l’Ucraina era parte dell’Unione Sovietica, uno stato autoritario in cui la segretezza e il controllo dell'informazione erano centrali. Dopo l’esplosione, le autorità ritardarono la comunicazione del disastro, minimizzando la gravità e mettendo a rischio milioni di persone.
+                </p>
+
+                <p>Il disastro di Chernobyl mise in evidenza:
+                    I limiti del sistema sovietico, incapace di gestire crisi complesse con trasparenza.
+                    Un impatto sulla fiducia pubblica che contribuì, negli anni successivi, al crollo dell’URSS (1991).
+                    La necessità di standard di sicurezza nucleare internazionali più rigorosi.</p>
+
+                <h3>fonti :</h3>
+                <p><a href="https://www.iaea.org/topics/chornobyl"> Dati emissioni radioattive</a></p>
+                <p><a href="https://world-nuclear.org/information-library/appendices/rbmk-reactors"> Caratteristiche tecniche RBMK-1000</a></p>
+                <p><a href="https://it.wikipedia.org/wiki/Pryp%22jat%27"> Dati su Pripyat</a></p>
+            </div>
+        </section>
+
+        <section id="cronologia">  
+            <h1>Cronologia del Disastro</h1>  
+            <div class="timeline">  
+                <div class="timeline-item">  
+                    <div class="timeline-icon"></div>  
+                    <div class="timeline-content">  
+                        <span class="timeline-date">25/04/1986 - 13:05</span>  
+                        <h3>Preparazione del test</h3>  
+                        <p>Inizia la riduzione di potenza per il test di sicurezza. Violazione del protocollo: il reattore viene portato a 1.600 MWth invece dei 700-1.000 MWth previsti.</p>  
+                    </div>  
+                </div>  
+                <div class="timeline-item">  
+                    <div class="timeline-icon"></div>  
+                    <div class="timeline-content">  
+                        <span class="timeline-date">26/04/1986 - 00:28</span>  
+                        <h3>Inizio del test</h3>  
+                        <p>Il reattore scende a 30 MWth, sviluppando un avvelenamento da xeno (temporanea disattivazione di un reattore nucleare a causa dell'accumulo di veleni nucleari nel nucleo del reattore) che rende il nucleo instabile.</p>  
+                    </div>  
+                </div>  
+                <div class="timeline-item">  
+                    <div class="timeline-icon"></div>  
+                    <div class="timeline-content">  
+                        <span class="timeline-date">26/04/1986 - 01:23:40</span>  
+                        <h3>Pulsante di emergenza</h3>  
+                        <p> Viene premuto il pulsante di emergenza AZ-5 (chiamato SCRAM). Si intendeva arrestare il reattore inserendo tutte le barre di controllo, ma queste a causa di un errore progettuale del reattore aumentano la reattività invece che ridurla.</p>  
+                    </div>  
+                </div>
+                <div class="timeline-item">  
+                    <div class="timeline-icon"></div>  
+                    <div class="timeline-content">  
+                        <span class="timeline-date">26/04/1986 - 01:23:45</span>  
+                        <h3>Esplosione</h3>  
+                        <p>Due esplosioni consecutive distruggono il reattore. La prima da vapore, la seconda da combustione dell'idrogeno e grafite.</p>
+                    </div>  
+                </div>
+                <div class="timeline-item">  
+                    <div class="timeline-icon"></div>  
+                    <div class="timeline-content">  
+                        <span class="timeline-date">27/04/1986 - 14:00</span>  
+                        <h3>Evacuazione</h3>  
+                        <p>Circa 36 ore dopo l'esplosione, le autorità sovietiche ordinarono l'evacuazione totale della città di Pripyat. 
+                            I cittadini furono informati che si trattava di una misura temporanea e che 
+                            sarebbero tornati presto, ma non fecero mai ritorno. 
+                            Circa 49.000 persone furono evacuate in poche ore con autobus, lasciando dietro di sé tutti i beni personali.</p>  
+                    </div>  
+                </div>  
+            </div>
+            
+            <h3>fonti :</h3>
+                <p><a href="https://www.lifegate.it/chernobyl"> Disastro Chernobyl, minuto per minuto</a></p>
+
+        </section>  
+
+        <!-- Sezione Conseguenze -->
+        <section id="conseguenze">
+            <h1>Conseguenze</h1>
+
+            <div class="content-block">
+                <div class="stats-grid">
+                    <div class="stat-box">
+                        <div class="stat-number">31</div>
+                        <div class="stat-label">31 morti accertati entro 3 mesi (sindrome acuta da radiazioni)</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">350.000+</div>
+                        <div class="stat-label">Persone evacuate tra il 1986 e il 1990</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">4.000+</div>
+                        <div class="stat-label">Morti stimate totali (fonte: IAEA, altre fondi indicano decine di migliaia di morti stimati in più).</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">5.000.000</div>
+                        <div class="stat-label">Persone che vissero in aree contaminate dopo l'incidente (stima ONU).</div>
+                    </div>
+                </div>
+
+                <h3>Le zone più colpite furono Bielorussia, Ucraina e Russia, ma anche Svezia, Polonia, Germania, Italia e altri paesi europei rilevarono alti livelli di radioattività.</h3>
+                <h3>Impatto sulla salute</h3>
+                <p>Le conseguenze sanitarie includono:</p>
+                <ul>
+                    <li>Aumento dei casi di cancro alla tiroide nei bambini</li>
+                    <li>Malattie da radiazioni acute tra i primi soccorritori</li>
+                    <li>Effetti psicologici a lungo termine</li>
+                    <li>Contaminazione del suolo e delle acque in vaste aree</li>
+                </ul>
+
+                <div class="image-container">
+                    <div class="image-placeholder">
+                        <img src="img/nube-cernobyl.jpg" alt="Chernobyl dopo il disastro" width="750" height="300"/>
+                    </div>
+                </div>
+            </div>
+
+            <h3>fonti :</h3>
+                <p><a href="https://www.iaea.org/newscenter/focus/chernobyl/faqs"> Conseguenze esplosione e propagazione radiazioni.</a></p>
+
+        </section>
+
+        <!-- Sezione Zona di Esclusione -->
+        <section id="zona">
+            <h1>Zona di Esclusione</h1>
+
+            <div class="content-block">
+                <p class="importante">La Zona di Esclusione di Chernobyl è un'area di circa 2.600 km² che circonda la centrale nucleare, creata dopo l'evacuazione delle comunità locali.
+                    Le funzioni principali della zona di esclusione sono limitare l'accesso all'area fortemente contaminata, monitorare e studiare gli effetti della contaminazione a lungo 
+                    termine, consentire interventi di bonifica, manutenzione del sarcofaco e controllo della radioattività in sicurezza.
+                </p>
+
+                <div class="location-grid">
+                    <div class="location-card">
+                        <h3>Pripyat</h3>
+                        <div class="image-placeholder small">
+                            <img src="img/prypriat.jpg" alt="Pripyat dopo il disastro" width="250 " height="200"/>
+                        </div>
+                        <p>Città fantasma, evacuata il 27 aprile 1986. Contava 49.000 abitanti, principalmente lavoratori della centrale e famiglie.</p>
+                    </div>
+
+                    <div class="location-card">
+                        <h3>Foresta Rossa</h3>
+                        <div class="image-placeholder small">
+                            <img src="img/foresta rossa.jpg" alt="Foresta rossa" width="250 " height="200"/>
+                        </div>
+                        <p>Area di pineta che ricevette le dosi più alte di radiazioni. Gli alberi morirono e assunsero un colore rosso-marrone.</p>
+                    </div>
+
+                    <div class="location-card">
+                        <h3>Nuovo Confinamento Sicuro</h3>
+                        <div class="image-placeholder small">
+                            <img src="img/sarcofago.jpg" alt="Sarcofago" width="250 " height="200"/>
+                        </div>
+                        <p>Struttura completata nel 2016 per contenere il reattore danneggiato. Sostituisce il "sarcofago" originale costruito nel 1986.</p>
+                    </div>
+                </div>
+
+                <h3>Natura e fauna</h3>
+                <p>Paradossalmente, l'assenza umana ha permesso alla natura di prosperare. La zona ospita oggi 60 specie di mammiferi e 120 di uccelli documentate, con popolazioni di lupi 7 volte più dense che nelle aree circostanti.</p>
+            </div>
+
+            <h3>fonti :</h3>
+                <p><a href="https://it.wikipedia.org/wiki/Disastro_di_%C4%8Cernobyl%27"> Conseguenze esplosione e propagazione radiazioni nelle zone circostanti.</a></p>
+
+        </section>
+
+        <!-- Sezione Galleria (placeholder) -->
+        <section id="galleria">
+            <h1>Galleria Fotografica</h1>
+
+            <div class="sottosezione" id="1986">
+                <h3>Foto del 1986</h3>
+                <div class="image-container">
+                    <img src="img/21-03-1986.jpg" alt="1986" width="600" height="400">
+                </div>
+            </div>
+
+            <div class="sottosezione" id="1987">
+                <h3>Foto del 1987</h3>
+                <div class="image-container">
+                    <img src="img/1987.png" alt="1987" width="600" height="400">
+                </div>
+            </div>
+
+            <div class="sottosezione" id="1988">
+                <h3>Foto del 1988</h3>
+                <div class="image-container">
+                    <img src="img/28-11-1988.jpg" alt="1988" width="600" height="400">
+                </div>
+            </div>
+
+            <div class="sottosezione" id="2002">
+                <h3>Foto del 2002</h3>
+                <div class="image-container">
+                    <img src="img/2002.png" alt="2002" width="600" height="400">
+                </div>
+            </div>
+
+            <div class="sottosezione" id="2021">
+                <h3>Foto del 2021</h3>
+                <div class="image-container">
+                    <img src="img/2021.png" alt="2021" width="600" height="400">
+                </div>
+            </div>
+
+            <div class="sottosezione" id="timelapse">
+                <h3>Timelapse</h3>
+                <video width="800" height="600" controls>
+                    <source src="img/timelapse.mp4" type="video/mp4">
+                </video>
+            </div>
+
+        </section>
+    </main>
+</div>
+
+<script src="script.js"></script>
+
 </body>
 </html>
